--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="fragment" content="!">
-	<base href="/">
+	<base href="/mak">
 	<title>Media Assembly Kit</title>
 	<link rel="apple-touch-icon" href="apple-touch-icon.png">
 	<link rel="icon" href="favicon.ico">
 	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.2/normalize.min.css">
 	<link rel="stylesheet" id="font-awesome-css" href="//netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.css?ver=4.3.0" type="text/css" media="all">
-	<link rel="stylesheet" href="/styles/loading-bar.css">
-	<link rel="stylesheet" href="/styles/style.css" />
+	<link rel="stylesheet" href="styles/loading-bar.css">
+	<link rel="stylesheet" href="styles/style.css" />
 	<!--[if lt IE 10]>
 		<script src="//cdn.rawgit.com/jpillora/xdomain/0.6.17/dist/xdomain.min.js" slave="http://managed.nattodaisuki.com/proxy.html"></script>
 	<![endif]-->
@@ -22,7 +22,7 @@
 <body>
 	<div id="page">
 		<header id="masthead" data-magellan-expedition="fixed">
-			<h1 class="site-title"><a href="/"><img src="/images/site-title@2x.png" width="184" height="34"></a></h1>
+			<h1 class="site-title"><a href="/mak"><img src="images/site-title@2x.png" width="184" height="34"></a></h1>
 			<nav id="header-nav-box">
 				<p class="header-menu-button" role="tab" aria-expanded="true"><i class="fa fa-bars"></i></span></p>
 				<p class="header-widget-button" role="tab" aria-expanded="false"><i class="fa fa-cogs"></i></span></p>
@@ -41,18 +41,18 @@
 		</footer>
 	</div>
 	<div id="overlay" class="close"></div>
-	<script src="/vendor/jquery-1.11.2.min.js"></script>
-	<script src="/vendor/angular.min.js"></script>
-	<script src="/vendor/angular-animate.min.js"></script>
-	<script src="/vendor/angular-ui-router.min.js"></script>
-	<script src="/vendor/angular-resource.min.js"></script>
-	<script src="/vendor/loading-bar.js"></script>
-	<script src="/mak-config.js"></script>
-	<script src="/core-scripts/app.js"></script>
-	<script src="/core-scripts/factorys/factory.js"></script>
-	<script src="/core-scripts/controllers/controller.js"></script>
-	<script src="/core-scripts/directives/directive.js"></script>
-	<script src="/scripts/views/view.js"></script>
+	<script src="vendor/jquery-1.11.2.min.js"></script>
+	<script src="vendor/angular.min.js"></script>
+	<script src="vendor/angular-animate.min.js"></script>
+	<script src="vendor/angular-ui-router.min.js"></script>
+	<script src="vendor/angular-resource.min.js"></script>
+	<script src="vendor/loading-bar.js"></script>
+	<script src="mak-config.js"></script>
+	<script src="core-scripts/app.js"></script>
+	<script src="core-scripts/factorys/factory.js"></script>
+	<script src="core-scripts/controllers/controller.js"></script>
+	<script src="core-scripts/directives/directive.js"></script>
+	<script src="scripts/views/view.js"></script>
 </body>
 
 </html>
