--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="fragment" content="!">
-	<base href="/mak">
+	<base href="/">
 	<title>Media Assembly Kit</title>
 	<link rel="apple-touch-icon" href="apple-touch-icon.png">
 	<link rel="icon" href="favicon.ico">
