--- a/demo/index.html
+++ b/demo/index.html
@@ -37,7 +37,7 @@
 			</div>
 		</div>
 		<footer id="footer">
-			<p id="copyright"><small>Copyright &copy; 2015 Webnist. All Rights Reserved.</small></p>
+			<p id="copyright"><small>Copyright &copy; 2015 DigitalCube Co. Ltd. All Rights Reserved.</small></p>
 		</footer>
 	</div>
 	<div id="overlay" class="close"></div>
